# swisscat

./: README.md  package.xml  requirements.txt  setup.cfg  setup.py
config/: robot_params.ini
launch/: controller.launch.py  edymobile_main.launch.py  ekf.launch.py  gazebo.launch.py  localization.launch.py  locatest.launch.py  main.launch.py  map2gazebo.launch  map2gazebo.launch.py  mapserver.launch.py  nav2.launch.py  one_robot_with_name.launch.py  overtake.launch.py  rviz.launch.py  sensor.launch.py  simulation.launch.py  spawn_edymobiles.launch.py  test.launch.py
maps/: circuit.yaml  map_atelier.pgm  map_atelier.yaml  overtake_map.pgm  overtake_map.yaml  test.yaml
mob_rob_loca/: nav_manager.py  nav_waypoints.py  tick_to_odom.py
mob_rob_loca.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
params/: EM_params.yaml  ekf_em.yaml  nav_params.yaml
rosbags/: read_rosbags.py
rosbags/Test1/: Test1_0.db3  metadata.yaml
rosbags/Test2/: Test2_0.mcap  metadata.yaml
rosbags/rosbag2_2024_06_03-14_16_58/: metadata.yaml
rosbags/rosbag2_2024_06_04-20_50_34/: metadata.yaml
rviz/: loca.rviz
swisscat_robot/: controller.py  fleet_manager.py
swisscat_robot/submodules/: robot.py
swisscat_simulation/: map2gazebo.py  map_publisher.py  marv_to_ekf.py  overtake.py
urdf/: edison.urdf  edison0.urdf  edison1.urdf  edymobile_theo.urdf.xacro
worlds/: edison_world.sdf  edison_world.world  map.sdf
