<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swisscat_robot</name>
  <version>0.0.1</version>
  <description>TODO</description>
  
  <maintainer email="edy.mariano@epfl.ch">Edy Mariano</maintainer>
  <author>Edy Mariano</author>
  <author>Agatha Duranceau</author>
  <author>Yasmine El Goumi</author>
  <author>Jean-Charles Cousty</author>

  <license>BSD</license>

  <exec_depend>ros2launch</exec_depend>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>launch_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <depend>tf_transformations</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_bringup</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
   <build_type>ament_python</build_type>
  </export>


</package>
